<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_nav2_gz_sim</name>
  <version>0.0.1</version>
  <description>Turtlebot3 Navigation using GZ-Sim (Garden)</description>
  <maintainer email="ros@todo.todo">ros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rviz2</exec_depend>

</package>
